--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "assemble-permalinks",
   "description": "Assemble plugin for easily creating permalinks (Assemble ^0.6.0)",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "homepage": "https://github.com/jonschlinkert/assemble-permalinks",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
   "repository": "jonschlinkert/assemble-permalinks",
@@ -22,19 +22,22 @@
   },
   "dependencies": {
     "isobject": "^2.0.0",
-    "lazy-cache": "^1.0.2",
+    "lazy-cache": "^1.0.3",
     "mixin-deep": "^1.1.3",
     "placeholders": "^0.2.0"
   },
   "devDependencies": {
     "assemble-core": "^0.7.0",
     "assemble-indexer": "^0.1.2",
+    "assemble-loader": "^0.2.6",
     "gulp": "^3.9.0",
     "gulp-eslint": "^1.1.1",
+    "gulp-format-md": "^0.1.4",
     "gulp-istanbul": "^0.10.3",
     "gulp-mocha": "^2.2.0",
     "mocha": "*",
-    "templates": "^0.8.1"
+    "rimraf": "^2.4.4",
+    "through2": "^2.0.0"
   },
   "keywords": [
     "assembleplugin",
