--- a/package.json
+++ b/package.json
@@ -65,15 +65,26 @@
     "url-routing"
   ],
   "verb": {
+    "run": true,
+    "toc": true,
+    "layout": "default",
+    "tasks": [
+      "readme"
+    ],
+    "plugins": [
+      "gulp-format-md"
+    ],
     "related": {
       "list": [
         "assemble",
         "templates"
       ]
     },
-    "plugins": [
-      "gulp-format-md"
+    "reflinks": [
+      "verb"
     ],
-    "layout": "default"
+    "lint": {
+      "reflinks": true
+    }
   }
 }
