--- a/package.json
+++ b/package.json
@@ -2,11 +2,11 @@
   "name": "assemble-permalinks",
   "description": "Assemble plugin for easily creating permalinks (Assemble ^0.6.0)",
   "version": "0.3.1",
-  "homepage": "https://github.com/jonschlinkert/assemble-permalinks",
+  "homepage": "https://github.com/assemble/assemble-permalinks",
   "author": "Jon Schlinkert (https://github.com/jonschlinkert)",
-  "repository": "jonschlinkert/assemble-permalinks",
+  "repository": "assemble/assemble-permalinks",
   "bugs": {
-    "url": "https://github.com/jonschlinkert/assemble-permalinks/issues"
+    "url": "https://github.com/assemble/assemble-permalinks/issues"
   },
   "license": "MIT",
   "files": [
@@ -66,7 +66,7 @@
   ],
   "verb": {
     "run": true,
-    "toc": true,
+    "toc": false,
     "layout": "default",
     "tasks": [
       "readme"
