--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "isobject": "^2.0.0",
     "lazy-cache": "^1.0.3",
     "mixin-deep": "^1.1.3",
-    "placeholders": "^0.2.0"
+    "placeholders": "^0.2.0",
+    "through2": "^2.0.1"
   },
   "devDependencies": {
     "assemble-core": "^0.16.1",
@@ -36,8 +37,7 @@
     "gulp-istanbul": "^0.10.4",
     "gulp-mocha": "^2.2.0",
     "mocha": "^2.4.5",
-    "rimraf": "^2.5.2",
-    "through2": "^2.0.1"
+    "rimraf": "^2.5.2"
   },
   "keywords": [
     "assemble",
