--- a/.travis.yml
+++ b/.travis.yml
@@ -1,8 +1,13 @@
 sudo: false
 language: node_js
 node_js:
-  - "stable"
-  - "5"
-  - "4"
+  - '5'
+  - '4'
+  - '0.12'
+  - '0.10'
 matrix:
   fast_finish: true
+  allow_failures:
+    - node_js: '4'
+    - node_js: '0.10'
+    - node_js: '0.12'
