--- a/package.json
+++ b/package.json
@@ -21,23 +21,24 @@
     "test": "mocha"
   },
   "dependencies": {
-    "isobject": "^2.0.0",
-    "lazy-cache": "^1.0.3",
+    "is-valid-app": "^0.2.0",
+    "isobject": "^2.1.0",
+    "lazy-cache": "^2.0.1",
     "mixin-deep": "^1.1.3",
-    "placeholders": "^0.2.0",
+    "placeholders": "^0.3.0",
     "through2": "^2.0.1"
   },
   "devDependencies": {
-    "assemble-core": "^0.16.1",
+    "assemble-core": "^0.25.0",
     "assemble-indexer": "^0.1.2",
-    "assemble-loader": "^0.3.0",
+    "assemble-loader": "^0.6.1",
     "gulp": "^3.9.1",
-    "gulp-eslint": "^2.0.0",
-    "gulp-format-md": "^0.1.7",
-    "gulp-istanbul": "^0.10.4",
+    "gulp-eslint": "^3.0.1",
+    "gulp-format-md": "^0.1.9",
+    "gulp-istanbul": "^1.0.0",
     "gulp-mocha": "^2.2.0",
-    "mocha": "^2.4.5",
-    "rimraf": "^2.5.2"
+    "mocha": "^2.5.3",
+    "rimraf": "^2.5.3"
   },
   "keywords": [
     "assemble",
