generate readme documentation with verb

--- a/package.json
+++ b/package.json
@@ -82,7 +82,8 @@
       ]
     },
     "reflinks": [
-      "verb"
+      "verb",
+      "verb-readme-generator"
     ],
     "lint": {
       "reflinks": true
