--- a/appveyor.yml
+++ b/appveyor.yml
@@ -1,27 +1,13 @@
-# Test against this version of Node.js
 environment:
   matrix:
-    # node.js
-    - nodejs_version: "6.0"
-    - nodejs_version: "5.0"
-    - nodejs_version: "4.0"
-    - nodejs_version: "0.12"
-    - nodejs_version: "0.10"
-
-# Install scripts. (runs after repo cloning)
+    - nodejs_version: '7'
+    - nodejs_version: '6'
+    - nodejs_version: '5'
 install:
-  # Get the latest stable version of Node.js or io.js
-  - ps: Install-Product node $env:nodejs_version
-  # install modules
+  - ps: 'Install-Product node $env:nodejs_version'
   - npm install
-
-# Post-install test scripts.
 test_script:
-  # Output useful info for debugging.
   - node --version
   - npm --version
-  # run tests
   - npm test
-
-# Don't actually build.
-build: off
+build: 'off'
